\name{NEWS}

\title{NEWS file for the smoothHR package}

\section{Changes in version 1.0.4}{
  \itemize{
    \item{Improved the documentation.}
    \item{Removed LICENSE file from build.}
    \item{Added option to plot hazard ratio and its log.}
  }
}

\section{Changes in version 1.0.3}{
  \itemize{
    \item{Improved the documentation.}
    \item{Removed ftp links.}
  }
}

\section{Changes in version 1.0.2}{
  \itemize{
    \item{Corrected NAMESPACE file.}
  }
}

\section{Changes in version 1.0.1}{
  \itemize{
    \item{Improved the documentation.}
    \item{Added research article to the CITATION file.}
    \item{Removed unnecessary require calls from R code.}
  }
}

\section{Changes in version 1.0}{
  \itemize{
    \item{First release.}
  }
}