@@ -1,8 +1,8 @@
 Encoding: UTF-8
 Package: smoothHR
 Type: Package
-Version: 1.0.4
-Date: 2022-09-04
+Version: 1.0.5
+Date: 2024-02-25
 Title: Smooth Hazard Ratio Curves Taking a Reference Value
 Authors@R: c(
 	person(
@@ -23,7 +23,7 @@ Depends: R (>= 2.12.0), survival, splines
 Description: Provides flexible hazard ratio curves allowing non-linear
   relationships between continuous predictors and survival.
   To better understand the effects that each continuous covariate
-  has on the outcome, results are ex pressed in terms of hazard
+  has on the outcome, results are expressed in terms of hazard
   ratio curves, taking a specific covariate value as reference.
   Confidence bands for these curves are also derived.
 License: GPL-3
@@ -32,9 +32,9 @@ BugReports: https://github.com/arturstat/smoothHR/issues
 LazyLoad: yes
 LazyData: yes
 NeedsCompilation: no
-Packaged: 2022-09-04 15:16:20 UTC; User
+Packaged: 2024-02-25 18:18:37 UTC; User
 Author: Artur Araujo [aut, cre] (<https://orcid.org/0000-0003-1419-4208>),
   Luis Meira-Machado [aut] (<https://orcid.org/0000-0002-8577-7665>)
 Maintainer: Artur Araujo <artur.stat@gmail.com>
 Repository: CRAN
-Date/Publication: 2022-09-04 16:00:02 UTC
+Date/Publication: 2024-02-25 18:40:02 UTC
