@@ -1,22 +1,22 @@
-2e645c194fa1ceed3f51175c55089db1 *DESCRIPTION
+3597f78027a93868b0de6a7723efcd4d *DESCRIPTION
 11a7b1701629e2e7761c634bdd52cbd5 *NAMESPACE
 7d8a8fd972aa35e9c9b5137867fcd690 *R/dfmacox.R
 0918817c73bf29c1c8367b2028a83681 *R/dfnsmult.R
 c8bd8ab7502a7d65c848fe49fca175b5 *R/dfnsuniv.R
 f0d9ed583a8125f639383d530b497e17 *R/dfpsuniv.R
-501145d154e085834aa8c89051e49cf0 *R/plot.HR.R
-7ab9a994ca7eec6d1d725d723d802cba *R/predict.HR.R
+362886825f402c73b4bd5e82b7e6f9fa *R/plot.HR.R
+cfb0688ccfd05da72a63461b75015b73 *R/predict.HR.R
 6a3830ecabb879b66b09a6862d06cb35 *R/print.HR.R
 7dcb17e6b270ea4bafae4201721cedbc *R/smoothHR.R
 65ee16eb0897ae9393c57ca3f3066d6d *README.md
-afbe4209b3bb961ba3e41cbfe79ea507 *build/partial.rdb
+b943a1546a1e17be4eea235ec7b4616b *build/partial.rdb
 4bab6c6b8e1585b2b52184968c5bb0b4 *data/whas500.rda
-34d7e6f6f385a8924b26f1a37012fb39 *inst/CITATION
-9a23826d8f18723542fe3bca22d4d2fd *inst/NEWS.Rd
+1e05c1349b1a0a7f39dd1d1656de244e *inst/CITATION
+a05425a10092d2359b091f54a187e264 *inst/NEWS.Rd
 7232b6fcb87aec024410a6e8887acab2 *man/dfmacox.Rd
-7e06e66519d7c9f350d176f2fbd62adb *man/plot.HR.Rd
+fa9862511d7aea2c6de11a909c239d32 *man/plot.HR.Rd
 1276b30f26b1b5803ac559f0b9adce45 *man/predict.HR.Rd
 1736aa9afaa96e5b78afadaa9ef71313 *man/print.HR.Rd
-a7a0562709c6239835d5d85ac38ad0e7 *man/smoothHR-package.Rd
+9144aaa8ca3606dd1eaadd3f8996b00a *man/smoothHR-package.Rd
 b0685f595395fffdda66a207054bb62f *man/smoothHR.Rd
 73ce64327789608ebead43dc8c48f944 *man/whas500.Rd
